--- a/h24.csproj
+++ b/h24.csproj
@@ -142,6 +142,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="api_queue.cs">
+      <DependentUpon>klc01.tt</DependentUpon>
+    </Compile>
     <Compile Include="categories.cs">
       <DependentUpon>klc01.tt</DependentUpon>
     </Compile>
@@ -165,6 +168,7 @@
     <Compile Include="Entries.cs" />
     <Compile Include="entry_xml.cs">
       <DependentUpon>klc01.tt</DependentUpon>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
     <Compile Include="frmChipNotFound.cs">
       <SubType>Form</SubType>
