created get_config_item, updatet somewhere implemented queue

--- a/app.config
+++ b/app.config
@@ -52,6 +52,9 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
   </startup>
+  <appSettings>
+    <add key="folderLocation" value="C:\\temp"/>
+  </appSettings>
   <userSettings>
     <h24.Properties.Settings>
       <setting name="dgTeams_Column1" serializeAs="String">
