--- a/packages.config
+++ b/packages.config
@@ -12,6 +12,8 @@
   <package id="Microsoft.ReportViewer.WinForms" version="10.0.40219.1" targetFramework="net46" />
   <package id="Microsoft.SqlServer.Types" version="14.0.1016.290" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net46" />
+  <package id="Serilog" version="2.12.0" targetFramework="net46" />
+  <package id="Serilog.Sinks.File" version="5.0.0" targetFramework="net46" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net46" />
   <package id="System.Memory" version="4.5.4" targetFramework="net46" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net46" />
