--- a/h24.csproj
+++ b/h24.csproj
@@ -278,6 +278,7 @@
     <Compile Include="PrintReport.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Strings.cs" />
     <Compile Include="results.cs">
       <DependentUpon>klc01.tt</DependentUpon>
     </Compile>
