--- a/h24.csproj
+++ b/h24.csproj
@@ -351,6 +351,7 @@
     </Compile>
     <EmbeddedResource Include="frmApiQueue.resx">
       <DependentUpon>frmApiQueue.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="frmChipNotFound.resx">
       <DependentUpon>frmChipNotFound.cs</DependentUpon>
