--- a/app.config
+++ b/app.config
@@ -40,8 +40,8 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="h24.Properties.Settings.klc01ConnectionString" connectionString="Data Source=localhost\sqlexpress;Initial Catalog=klc01_de;User ID=sportident;Password=sportident;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient"/>
-    <add name="klc01" connectionString="metadata=res://*/klc01.csdl|res://*/klc01.ssdl|res://*/klc01.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\sqlexpress;initial catalog=klc01_de;User ID=sportident;Password=sportident;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+    <add name="h24.Properties.Settings.klc01ConnectionString" connectionString="Data Source=localhost\sqlexpress;Initial Catalog=klc01_24zak;User ID=sportident;Password=sportident;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient"/>
+    <add name="klc01" connectionString="metadata=res://*/klc01.csdl|res://*/klc01.ssdl|res://*/klc01.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\sqlexpress;initial catalog=klc01_24zak;User ID=sportident;Password=sportident;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework"/>
